src/scss/components/_achievements.scss
.achievements {
  background: $color-main;
  padding-top: 5.2rem;
  padding-bottom: 5.2rem;
  &__list {
    display: flex;
    gap: 24rem;
  }
  &__number {
    text-align: center;
    font-weight: 600;
    font-size: 5.6rem;
    line-height: 6.7rem;
    color: $color-neutral;
    margin-bottom: 2.4rem;
  }
  &__text {
    font-weight: 500;
    font-size: 2rem;
    line-height: 2.4rem;
    text-align: center;
    text-transform: uppercase;
    color: $color-neutral;
  }
}

